fix some bugs, update comment apis such as deleting, and add test/code coverage libraries such as mocha, chai, and istanbul
